testsuite/tests/typecheck/should_compile/tc004.alan
unusedFun() : proc
  foo1() : proc
  {}
  foo2() : proc
    foo3() : proc
    {}
  { foo1(); }
{}
