testsuite/tests/typecheck/should_fail/tcfail003.alan
noRetErr() : proc
  foo1() : proc
  {
    writeString("In foo1\n");
  }
  foo2() : int
  {
    writeString("In foo2\n");
  }
{
  foo1();
  foo2();
}
